[gd_scene load_steps=2 format=3 uid="uid://cdv4kihjn484t"]

[ext_resource type="Script" path="res://Components/scripts/dash_component.gd" id="1_ys8tf"]

[node name="DashComponent" type="Node2D"]
script = ExtResource("1_ys8tf")

[node name="DashTimer" type="Timer" parent="."]

[node name="DashCooldown" type="Timer" parent="."]
